src/CPlot2D/CPlot2D.h

  CPlot2D* CPlot2D__new(const char* title);
  void CPlot2D__SetXAxisSize(CPlot2D* This, double value);
  void CPlot2D__SetYAxisSize(CPlot2D* This, double value);
  void CPlot2D__SetDrawXAxisGridLines(CPlot2D* This, bool flag);
  void CPlot2D__SetDrawYAxisGridLines(CPlot2D* This, bool flag);
  void CPlot2D__SetDrawLegend(CPlot2D* This, bool flag);
  void CPlot2D__SetFlipY(CPlot2D* This, bool flag);
  void CPlot2D__AddDataSet(CPlot2D* This, CDataSet* dataSet);
  void CPlot2D__SetXAxisTitle(CPlot2D* This, const char* font);
  void CPlot2D__SetYAxisTitle(CPlot2D* This, const char* font);
  void CPlot2D__OutputPostScriptPlot(CPlot2D* This, const char* fileName);
  void CPlot2D__delete(CPlot2D* This);
  CDataSet* CDataSet__new();
  void CDataSet__SetDrawLine(CDataSet* This, bool flag);
  void CDataSet__SetDrawMarker(CDataSet* This, bool flag);
  void CDataSet__SetMarkerSize(CDataSet* This, double size);
  void CDataSet__SetDatasetColor(CDataSet* This, double r, double g, double b);
  CDataPoint* CDataPoint__new2(double x, double y);
  void CDataPoint__delete(CDataPoint* This);
  void CDataSet__AddDataPoint(CDataSet* This, CDataPoint* point);
  void CDataSet__delete(CDataSet* This);